<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="0dp"
        android:transitionName="@string/app_name"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        android:visibility="visible">
        <RelativeLayout
            android:id="@+id/rlMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imgMain"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:background="@mipmap/ic_noti_logo"/>
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <View
        android:layout_below="@+id/imgMain"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black_54"/>

    <LinearLayout
        android:layout_marginTop="@dimen/margin_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <Button
            android:id="@+id/btBmw"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/bmw"
            android:gravity="center"/>
        <Button
            android:id="@+id/btCookery"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/cokery_show"
            android:gravity="center"/>
        <Button
            android:id="@+id/btZara"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/zara"
            android:gravity="center"/>
        <Button
            android:id="@+id/btZoobi"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/zoobi_doobi"
            android:gravity="center"/>
        <Button
            android:id="@+id/btUS"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/us_presidential"
            android:gravity="center"/>
        <Button
            android:id="@+id/btEdu"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/education"
            android:gravity="center"/>
        <Button
            android:id="@+id/btRange"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/range_rover"
            android:gravity="center"/>
        <Button
            android:id="@+id/btMovie"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/movie_mashup"
            android:gravity="center"/>
        <Button
            android:id="@+id/btFilipino"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/filipino_factor"
            android:gravity="center"/>
        <Button
            android:id="@+id/btMummy"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/mummy_ka_magic"
            android:gravity="center"/>
        <Button
            android:id="@+id/btExplore"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/exploring_the_coral_reef"
            android:gravity="center"/>

    </LinearLayout>

</LinearLayout>